clusters/proxmox-home/proxy/truenas/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: truenas
  namespace: truenas-proxy
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: admin
---
apiVersion: v1
kind: Endpoints
metadata:
  name: truenas
  namespace: truenas-proxy
subsets:
- addresses:
  - ip: 192.168.88.25
  ports:
  - name: admin
    port: 80
    protocol: TCP
