clusters/proxmox-home/proxy/truenas/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: truenas-proxy
  name: truenas-ingress
  annotations:
   cert-manager.io/cluster-issuer: letsencrypt-prod
   nginx.ingress.kubernetes.io/auth-tls-pass-certificate-to-upstream: "true"
   nginx.ingress.kubernetes.io/auth-tls-secret: truenas-proxy/ca-secret
   nginx.ingress.kubernetes.io/auth-tls-verify-client: "on"
   nginx.ingress.kubernetes.io/auth-tls-verify-depth: "1"
  labels:
    app.kubernetes.io/name: truenas-ingress
    app.kubernetes.io/component: ingress
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - nas.mgsds.com
    - cloud.mgsds.com
    secretName: nas.mgsds.com-tls
  rules:
  - host: nas.mgsds.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: truenas
            port:
              number: 80
  - host: cloud.mgsds.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: truenas
            port:
              number: 30027
